# aiotaskqueue

./: .gitignore  404.html  CHANGELOG.md  README.md  Taskfile.yml  docker-compose.yaml  dockerfile  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yaml  lint.yaml  test.yaml
aiotaskqueue/: __init__.py  _util.py  config.py  extensions.py  publisher.py  router.py  tasks.py  worker.py
aiotaskqueue/broker/: inmemory.py  redis.py
aiotaskqueue/broker/sql/sqlalchemy/: __init__.py  _utls.py  broker.py  models.py  schedulerd_broker.py
aiotaskqueue/experimental/: reduce.py
aiotaskqueue/extensions/: abc.py
aiotaskqueue/result/: abc.py  redis.py
aiotaskqueue/result/sql/sqlalchemy/: __init__.py  backend.py  models.py
aiotaskqueue/scheduler/: __init__.py  _scheduler.py  abc.py
aiotaskqueue/serialization/: __init__.py  _serialization.py
asyncqueue/: _util.py  config.py  consumer.py  publisher.py  router.py  serialization.py  task.py  tasks.py  worker.py
asyncqueue/broker/: abc.py  inmemory.py  redis.py
asyncqueue/result/: abc.py  redis.py
asyncqueue/scheduler/: _scheduler.py  _schedules.py
asyncqueue/serialization/: __init__.py  _serialization.py  msgspec.py
changelog/: index.html
code/components/: publisher.py
code/extensions/builtin/: retry.py
code/getting_started/: task_example.py  task_markers.py
code/getting_started/publishing/: example.py
components/: index.html
components/broker/: index.html
components/broker/redis/: index.html
components/publisher/: index.html
components/result-backend/: index.html
configuration/: index.html
docs/: index.md
docs/code/components/: publisher.py
docs/code/extensions/builtin/: retry.py
docs/code/getting-started/: task_markers.py  worker.py
docs/code/getting-started/publishing/: example.py
docs/code/getting_started/: task_router_example.py  worker.py
docs/code/getting_started/publishing/: example.py
docs/components/: index.md  publisher.md  result-backend.md
docs/components/broker/: index.md  redis.md
docs/configuration/: index.md
docs/extensions/: index.md
docs/extensions/builtin/: retry.md
docs/getting-started/: declaring-tasks.md  publishing-tasks.md  worker.md
docs/internals/: message-format.md
example/: _components.py  publish.py  result.py  scheduler.py  tasks.py  worker.py
extensions/: index.html
extensions/builtin/retry/: index.html
getting-started/declaring-tasks/: index.html
getting-started/publishing-tasks/: index.html
getting-started/worker/: index.html
internals/message-format/: index.html
search/: search_index.json
tests/: conftest.py  fixtures.py  models.py  tasks.py  test_cron_task.py  test_publisher.py  test_router.py  test_scheduled_task.py  test_scheduler.py  test_util.py  test_worker.py  utils.py
tests/brokers/: test_inmemory.py  test_redis.py
tests/experiments/: test_reduce.py  test_sequential.py
tests/extensions/: test_on_task_execution.py  test_retries.py
tests/plugins/: fixtures.py  postgresql.py  redis.py
tests/result_backend/: test_redis.py
